[package]
name = "grafkom-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.18", features = ["persistence"] }
egui = "0.18"
serde = "1.0"
ron = "0.7"
# image = "0.24.1"
# tokio = { version = "1", features = ["rt-multi-thread", "time"] }

#override all other dependencies to build with release default(opt-level) 
